--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
-URL = url that the front end points to
+API = API that the front gets info from
 PORT = set your port number
-Pic = picture
+WEBPACK = development || production
