--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-pots",
+  "name": "react-template",
   "version": "1.0.0",
-  "description": "ABA How-to-Guide",
+  "description": "A quick react.js template repo",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -12,20 +12,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/The-Frying-Pans/project-pots.git"
+    "url": "git+https://github.com/Ghasb001/react-template"
   },
   "author": "Guillermo Hasbun",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/The-Frying-Pans/project-pots/issues"
+    "url": "hhttps://github.com/Ghasb001/react-template/issues"
   },
-  "homepage": "https://github.com/The-Frying-Pans/project-pots#readme",
+  "homepage": "https://github.com/Ghasb001/react-template#readme",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
     "@testing-library/react": "^14.0.0",
     "axios": "^1.4.0",
     "babel": "^6.23.0",
